--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,6 +29,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
           git config user.name "Automated"
-          git config user.email "actions@users.noreply.github.com"
+          git config user.email "jackcenatempo@gmail.com"
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/mldangelo/personal-site.git
           npm run deploy
