--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,7 @@
       "aspects": ["noHref", "invalidHref", "preferButton"],
       "linebreak-style": 0, // JWC made these changes for CRLF/LF failure per adaption guidelines.
       "global-require": 0,
-      "eslint-linebreak-style": [0, "error", "windows"]
+      "eslint linebreak-style": [0, "error", "windows"]
     }],
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/href-no-hash": "off",
