--- a/.eslintrc
+++ b/.eslintrc
@@ -7,13 +7,15 @@
     "jest": true
   },
   "rules": {
+    "linebreak-style": 0,
     "jsx-a11y/anchor-is-valid": ["error", {
       "components": ["Link"],
       "specialLink": ["to", "hrefLeft", "hrefRight"],
       "aspects": ["noHref", "invalidHref", "preferButton"],
       // "linebreak-style": 0, // JWC made these changes for CRLF/LF failure per adaption guidelines.
       // "linebreak-style": ["error", process.platform === "win32" ? "windows" : "unix"],
-      "linebreak-style": ["error", "windows"],
+      // "linebreak-style": ["error", "windows"],
+      "linebreak-style": 0,
       "global-require": 0,
       "eslint linebreak-style": [0, "error", "windows"]
     }],
